<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>PSD_Invest_Analyzer</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>PSD_Invest_Analyzer</name>
	<description>PSD_Invest_Analyzer</description>
	<properties>
		<java.version>17</java.version>
	</properties>
<!--	<dependencies>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter</artifactId>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.kafka</groupId>-->
<!--			<artifactId>spring-kafka</artifactId>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.projectlombok</groupId>-->
<!--			<artifactId>lombok</artifactId>-->
<!--			<optional>true</optional>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-test</artifactId>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework.kafka</groupId>-->
<!--			<artifactId>spring-kafka-test</artifactId>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->

<!--&lt;!&ndash;		<dependency>&ndash;&gt;-->
<!--&lt;!&ndash;			<groupId>org.apache.flink</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;			<artifactId>flink-streaming-java_2.12</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;			<version>1.13.0</version>&ndash;&gt;-->
<!--&lt;!&ndash;		</dependency>&ndash;&gt;-->

<!--		<dependency>-->
<!--			<groupId>org.apache.flink</groupId>-->
<!--			<artifactId>flink-streaming-java</artifactId>-->
<!--			<version>1.15.1</version>-->
<!--&lt;!&ndash;			<scope>provided</scope>&ndash;&gt;-->
<!--		</dependency>-->


<!--		<dependency>-->
<!--			<groupId>org.apache.flink</groupId>-->
<!--			<artifactId>flink-clients</artifactId>-->
<!--			<version>1.15.1</version>-->
<!--		</dependency>-->

<!--&lt;!&ndash;		<dependency>&ndash;&gt;-->
<!--&lt;!&ndash;			<groupId>org.apache.flink</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;			<artifactId>flink-clients_2.12</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;			<version>1.13.0</version>&ndash;&gt;-->
<!--&lt;!&ndash;		</dependency>&ndash;&gt;-->


<!--		<dependency>-->
<!--			<groupId>org.apache.flink</groupId>-->
<!--			<artifactId>flink-connector-kafka</artifactId>-->
<!--			<version>1.15.1</version>-->
<!--		</dependency>-->


<!--&lt;!&ndash;		<dependency>&ndash;&gt;-->
<!--&lt;!&ndash;			<groupId>org.apache.flink</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;			<artifactId>flink-connector-kafka_2.12</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;			<version>1.13.2</version>&ndash;&gt;-->
<!--&lt;!&ndash;		</dependency>&ndash;&gt;-->


<!--		<dependency>-->
<!--			<groupId>org.apache.flink</groupId>-->
<!--			<artifactId>flink-runtime</artifactId>-->
<!--			<version>1.15.1</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->




<!--		<dependency>-->
<!--			<groupId>com.fasterxml.jackson.core</groupId>-->
<!--			<artifactId>jackson-databind</artifactId>-->
<!--			<version>2.12.5</version> &lt;!&ndash; Zastąp odpowiednią wersją &ndash;&gt;-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>com.google.code.gson</groupId>-->
<!--			<artifactId>gson</artifactId>-->
<!--			<version>2.8.9</version>-->
<!--		</dependency>-->

<!--&lt;!&ndash;		<dependency>&ndash;&gt;-->
<!--&lt;!&ndash;			<groupId>org.scala-lang</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;			<artifactId>scala-library</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;			<version>2.12.14</version>&ndash;&gt;-->
<!--&lt;!&ndash;			<scope>test</scope>&ndash;&gt;-->
<!--&lt;!&ndash;		</dependency>&ndash;&gt;-->

<!--		<dependency>-->
<!--			<groupId>org.scala-lang</groupId>-->
<!--			<artifactId>scala-library</artifactId>-->
<!--			<version>2.13.10</version>-->
<!--		</dependency>-->



<!--		<dependency>-->
<!--			<groupId>org.openjfx</groupId>-->
<!--			<artifactId>javafx</artifactId>-->
<!--			<version>11</version>-->
<!--			<type>pom</type>-->
<!--		</dependency>-->

<!--&lt;!&ndash;		<dependency>&ndash;&gt;-->
<!--&lt;!&ndash;			<groupId>org.apache.flink</groupId>&ndash;&gt;-->
<!--&lt;!&ndash;			<artifactId>flink-connector-filesystem_2.12</artifactId>&ndash;&gt;-->
<!--&lt;!&ndash;			<version>1.11.6</version>&ndash;&gt;-->
<!--&lt;!&ndash;		</dependency>&ndash;&gt;-->

<!--		<dependency>-->
<!--			<groupId>org.apache.flink</groupId>-->
<!--			<artifactId>flink-connector-files</artifactId>-->
<!--			<version>1.15.1</version>-->
<!--		</dependency>-->



<!--		<dependency>-->
<!--			<groupId>ch.qos.logback</groupId>-->
<!--			<artifactId>logback-classic</artifactId>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.apache.flink</groupId>-->
<!--			<artifactId>flink-test-utils</artifactId>-->
<!--			<version>1.15.1</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.apache.kafka</groupId>-->
<!--			<artifactId>kafka-clients</artifactId>-->
<!--			<version>3.4.0</version>-->
<!--		</dependency>-->


<!--	</dependencies>-->
	<dependencies>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.12.5</version> <!-- Zastąp odpowiednią wersją -->
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.9</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka-streams</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-clients</artifactId>
			<version>1.17.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>2.13.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
			<version>3.0.7</version>
		</dependency>

		<dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-test-utils</artifactId>
			<version>1.17.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.flink</groupId>
			<artifactId>flink-connector-kafka</artifactId>
			<version>1.17.1</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<argLine>
						--add-opens java.base/java.util=ALL-UNNAMED
						--add-opens java.base/java.lang=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
